--- a/food.html
+++ b/food.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="superscript.js"></script>
 </head>
 <body>
+
 <div class="nav">
 <ul>
 	<li><a href="index.html">Home</a></li>
@@ -19,8 +20,10 @@
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </div>
+
 <img src="images/gourds.jpg" class="banner">
 <h1>Food</h1>
+
 <div class="main">
 <p>These are some of my favourite recipes to make and eat!</p>
 
@@ -126,8 +129,7 @@
 </div>
 
 </div>
-<div class="footer">
-	<p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p>
+<div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p>
 </div>
 </body>
 </html>
