--- a/gaming.html
+++ b/gaming.html
@@ -4,8 +4,10 @@
 	<title>Gaming</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script type="text/javascript" src="superscript.js"></script></head>
+	<script type="text/javascript" src="superscript.js"></script>
+</head>
 <body>
+
 <div class="nav">
 <ul>
 	<li><a href="index.html">Home</a></li>
@@ -18,8 +20,10 @@
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </div>
+
 <img src="images/cpu.jpg" class="banner">
 <h1>Gaming</h1>
+
 <div class="main">
 <p>I have loved games ever since I played my cousin's Super Nintendo. The first game console I owned was a GameCube, but I always played games on my parents' computer when I was a kid. When the time came that I could afford one, I built my own PC and loaded it with hundreds of games.</p>
 <p>You can find some of my favourite games below. Click the links to get more information.</p>
@@ -28,8 +32,8 @@
 	<li><a href="https://www.fallout4.com/">Fallout 4</a></li>
 </ul>
 </div>
-<div class="footer">
-<p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p>
-</div>
+
+<div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
+
 </body>
 </html>
