--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="superscript.js"></script></head>
 <body>
+
 <div class="nav">
 <ul>
 	<li><a href="index.html" id="active">Home</a></li>
@@ -18,9 +19,10 @@
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </div>
+
 <img src="images/leaves.jpg" class="banner">
 <h1>Welcome</h1>
-<div class="footer">
-	<p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p>
-</div>
+
+<div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
+
 </html>
