--- a/music.html
+++ b/music.html
@@ -6,6 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="superscript.js"></script></head>
 <body>
+
 <div class="nav">
 <ul>
 	<li><a href="index.html">Home</a></li>
@@ -18,15 +19,17 @@
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </div>
+
 <img src="images/piano.jpg" class="banner">
 <h1>Music</h1>
+
 <div class="main">
 <p>Music has always been a major part of my life. I started violin lessons at the age of 5 and over the years, I have taught myself to play a variety of instruments such as guitar, piano and drums.</p>
 <p>Here is a music video my friends and I made for a com-tech project in highschool.</p>
-<div style="text-align:center"><iframe width="560" height="315" align="middle" src="https://www.youtube.com/embed/m7RZhkG8nCY" frameborder="0" allowfullscreen></iframe></div>
+<div style="text-align:center"><iframe width="560" height="315" src="https://www.youtube.com/embed/m7RZhkG8nCY" frameborder="0" allowfullscreen></iframe></div>
 </div>
-<div class="footer">
-	<p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p>
-</div>
+
+<div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
+
 </body>
 </html>
