--- a/travel.html
+++ b/travel.html
@@ -6,6 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="superscript.js"></script></head>
 <body>
+
 <div class="nav">
 <ul>
 	<li><a href="index.html">Home</a></li>
@@ -17,9 +18,11 @@
 	<li><a href="family.html">Family</a></li>
 	<li><a href="contact.html">Contact</a></li>
 </ul>
-<img src="images/cove.jpg" class="banner">
 </div>
+
+<img src="images/cove.jpg" class="banner">
 <h1>Travel</h1>
+
 <div class="main">
 <p>Here is a collection of photos from my family trip to Ireland.</p>
 <div class="gallery">
@@ -34,8 +37,8 @@
 	<img src="images/gal9.jpg">
 </div>
 </div>
-<div class="footer">
-	<p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p>
-</div>
+
+<div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
+
 </body>
 </html>
