--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="superscript.js"></script></head>
 <body>
+
 <div class="nav">
 <ul>
 	<li><a href="index.html">Home</a></li>
@@ -18,15 +19,17 @@
 	<li><a href="contact.html" id="active">Contact</a></li>
 </ul>
 </div>
+
 <img src="images/phone.jpg" class="banner">
-<div class="contact">
 <h1>Contact</h1>
+
+<div class="contact">
 <p>Eric Thompson</p>
 <p>Phone: 519-274-5796</p>
 <a href="mailto:n01128554@humbermail.ca">Email</a>
 </div>
-<div class="footer">
-	<p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p>
-</div>
+
+<div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
+
 </body>
 </html>
