--- a/fitness.html
+++ b/fitness.html
@@ -6,6 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="superscript.js"></script></head>
 <body>
+
 <div class="nav">
 <ul>
 	<li><a href="index.html">Home</a></li>
@@ -18,13 +19,15 @@
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </div>
+
 <img src="images/stones.jpg" class="banner">
 <h1>Fitness</h1>
+
 <div class="main">
 <p>Throughout my life, I have enjoyed numerous outdoor activities such as biking, skateboarding and snowboarding. I have never been a very competitive person, so I have always found alternative ways to be active.</p>
 </div>
-<div class="footer">
-	<p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p>
-</div>
+
+<div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
+
 </body>
 </html>
