Removed empty pages

--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,8 @@
 	<li><a href="index.html">Home</a></li>
 	<li><a href="music.html">Music</a></li>
 	<li><a href="gaming.html">Gaming</a></li>
-	<li><a href="fitness.html">Fitness</a></li>
 	<li><a href="travel.html">Travel</a></li>
 	<li><a href="food.html">Food</a></li>
-	<li><a href="family.html">Family</a></li>
 	<li><a href="contact.html" id="active">Contact</a></li>
 </ul>
 </div>
@@ -24,9 +22,10 @@
 <h1>Contact</h1>
 
 <div class="contact">
-<p>Eric Thompson</p>
-<p>Phone: 519-274-5796</p>
-<a href="mailto:n01128554@humbermail.ca">Email</a>
+<h3>Eric Thompson</h3>
+<a href="mailto:n01128554@humbermail.ca">Email</a><br><br>
+<a href="https://github.com/ethomp10">GitHub</a><br><br>
+<a href="https://www.linkedin.com/in/eric-thompson-836393106">LinkedIn</a>
 </div>
 
 <div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
