--- a/gaming.html
+++ b/gaming.html
@@ -13,10 +13,8 @@
 	<li><a href="index.html">Home</a></li>
 	<li><a href="music.html">Music</a></li>
 	<li><a href="gaming.html" id="active">Gaming</a></li>
-	<li><a href="fitness.html">Fitness</a></li>
 	<li><a href="travel.html">Travel</a></li>
 	<li><a href="food.html">Food</a></li>
-	<li><a href="family.html">Family</a></li>
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </div>
@@ -27,10 +25,11 @@
 <div class="main">
 <p>I have loved games ever since I played my cousin's Super Nintendo. The first game console I owned was a GameCube, but I always played games on my parents' computer when I was a kid. When the time came that I could afford one, I built my own PC and loaded it with hundreds of games.</p>
 <p>You can find some of my favourite games below. Click the links to get more information.</p>
-<ul>
-	<li><a href="http://orange.half-life2.com/hl2.html">Half-Life 2</a></li>
-	<li><a href="https://www.fallout4.com/">Fallout 4</a></li>
-</ul>
+<div class="games">
+	<a href="http://orange.half-life2.com/hl2.html"><img src="images/hl2.jpg"></a>
+	<a href="https://www.fallout4.com/"><img src="images/fo4.jpg"></a>
+	<a href="http://www.rockstargames.com/V/"><img src="images/gta.jpg"></a>
+</div>
 </div>
 
 <div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
