--- a/travel.html
+++ b/travel.html
@@ -12,10 +12,8 @@
 	<li><a href="index.html">Home</a></li>
 	<li><a href="music.html">Music</a></li>
 	<li><a href="gaming.html">Gaming</a></li>
-	<li><a href="fitness.html">Fitness</a></li>
 	<li><a href="travel.html" id="active">Travel</a></li>
 	<li><a href="food.html">Food</a></li>
-	<li><a href="family.html">Family</a></li>
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </div>
@@ -25,7 +23,8 @@
 
 <div class="main">
 <p>Here is a collection of photos from my family trip to Ireland.</p>
-<div class="gallery">
+<p>Click any image to expand it.</p>
+<div class="thumb" id="gallery">
 	<img src="images/gal1.jpg">
 	<img src="images/gal2.jpg">
 	<img src="images/gal3.jpg">
