--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 	<li><a href="index.html" id="active">Home</a></li>
 	<li><a href="music.html">Music</a></li>
 	<li><a href="gaming.html">Gaming</a></li>
-	<li><a href="fitness.html">Fitness</a></li>
 	<li><a href="travel.html">Travel</a></li>
 	<li><a href="food.html">Food</a></li>
-	<li><a href="family.html">Family</a></li>
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </div>
 
 <img src="images/leaves.jpg" class="banner">
 <h1>Welcome</h1>
+
+<div class="main" style="text-align:center">
+<p>This website was made to demonstrate who I am as a person. It is a collection of hobbies, interests and skills.</p>
+<p>Click any of the links above to see various aspects of my life.</p>
+</div>
 
 <div class="footer"><p>Copyright &copy 2015 by Eric Thompson. All rights reserved.</p></div>
 
